--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,12 @@
 	<title>test</title>
 </head>
 <body>
-<div id="result"></div>
-<script type="text/javascript" src="main.js"></script>
+	<canvas id="webgl" width="600" height="400">
+		Please use a browser that supports "canvas"
+	</canvas>
+	<div id="result"></div>
+	<script type="text/javascript" src="main.js"></script>
+	<script type="text/javascript" src="webgl.js"></script>
+
 </body>
 </html>
