--- a/client/index.html
+++ b/client/index.html
@@ -8,8 +8,10 @@
 		Please use a browser that supports "canvas"
 	</canvas>
 	<div id="result"></div>
-	<script type="text/javascript" src="main.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script type="text/javascript" src="glMatrix-min.js"></script>
 	<script type="text/javascript" src="webgl.js"></script>
+	<script type="text/javascript" src="main.js"></script>
 
 </body>
 </html>
