--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
 	<div id="result"></div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script type="text/javascript" src="glMatrix-min.js"></script>
+	<script type="text/javascript" src="obj_loader.js"></script>
 	<script type="text/javascript" src="webgl.js"></script>
 
 </body>
