--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
 	<canvas id="webgl" width="800" height="600">
 		Please use a browser that supports "canvas"
 	</canvas>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script type="text/javascript" src="glMatrix-min.js"></script>
 	<script type="text/javascript" src="obj_loader.js"></script>
 	<script type="text/javascript" src="webgl.js"></script>
